# dalembic

./: .gitignore  .pypirc.example  AGENTS.md  LICENSE  README.md  docker-compose.yml  pgadmin-pgpass  pgadmin-servers.json  publish.py  pyproject.toml
.github/workflows/: ci.yml
dalembic/: __init__.py  __main__.py  archive.py  cli.py  connection.py  dalembic_state.py  deployment.py  revert.py  runtime.py  seeds.py  settings.py  state_store.py
dalembic/testing/: __init__.py  base.py  db_mixin.py  git_mixin.py
tests/fixtures/taskboard_app/: alembic.ini
tests/fixtures/taskboard_app/migrations/: env.py
tests/fixtures/taskboard_app/migrations/versions/: 0001_bootstrap.py  0002_teams.py  0003_tasks.py  0004_task_events.py  0005_task_team_default.py
tests/integration/: test_revert_flow.py  test_stg_migration_flow.py
tests/unit/: test_connection.py  test_revert.py  test_settings.py
