[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[project]
name = "dalembic"
version = "0.1.0"
description = "Branch-aware Alembic deployment: STG downgrade-to-main, prod upgrade-to-head, reverts, and deploy state."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["alembic", "migrations", "database", "deploy", "postgresql"]
dependencies = [
    "alembic>=1.13",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[project.scripts]
dalembic = "dalembic.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["dalembic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
markers = [
    "integration: tests requiring Postgres (docker compose up -d db)",
]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
